--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,11 @@
 plugins {
 	id 'org.springframework.boot' version '2.5.5'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'idea'
 	id 'java'
 	//id 'war'
 }
+
 
 group = 'com.crud'
 version = '0.0.1-SNAPSHOT'
