--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database=mysql
+#spring.jpa.database=postgresql
 #spring.datasource.url=${JDBC_DATABASE_URL}
 #spring.datasource.username=${JDBC_DATABASE_USERNAME}
 #spring.datasource.password=${JDBC_DATABASE_PASSWORD}
@@ -12,9 +12,9 @@ trello.app.user=hubertskorulski1
 
 #server.port=${PORT:8080}
 
-spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
-spring.datasource.username=huubsoon
-spring.datasource.password=Misiek1!
-spring.jpa.show-sql=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
+#spring.datasource.username=huubsoon
+#spring.datasource.password=Misiek1!
+#spring.jpa.show-sql=true
 
 
