--- a/build.gradle
+++ b/build.gradle
@@ -16,14 +16,15 @@ repositories {
 jar {
 	enabled = false
 }
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
-	runtimeOnly 'mysql:mysql-connector-java'
-	//runtimeOnly 'org.postgresql:postgresql'
+	//runtimeOnly 'mysql:mysql-connector-java'
+	runtimeOnly 'org.postgresql:postgresql'
 
 	compileOnly 'org.projectlombok:lombok:1.18.20'
 	annotationProcessor 'org.projectlombok:lombok:1.18.20'
