--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,11 +12,11 @@ trello.app.user=hubertskorulski1
 
 #server.port=${PORT:8080}
 
-spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
-spring.datasource.username=huubsoon
-spring.datasource.password=Misiek1!
-spring.jpa.show-sql=true
+#spring.jpa.database=mysql
+#spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
+#spring.datasource.username=huubsoon
+#spring.datasource.password=Misiek1!
+#spring.jpa.show-sql=true
 
 # EMAIL CONFIGURATION
 spring.mail.host=smtp.gmail.com
