--- a/build.gradle
+++ b/build.gradle
@@ -23,8 +23,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
-	//runtimeOnly 'mysql:mysql-connector-java'
-	runtimeOnly 'org.postgresql:postgresql'
+	runtimeOnly 'mysql:mysql-connector-java'
+	//runtimeOnly 'org.postgresql:postgresql'
 
 	compileOnly 'org.projectlombok:lombok:1.18.20'
 	annotationProcessor 'org.projectlombok:lombok:1.18.20'
@@ -34,8 +34,6 @@ dependencies {
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
 	testImplementation("org.springframework.boot:spring-boot-starter-test")
 	//providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
-	//implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
-	//implementation group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
 	implementation('io.springfox:springfox-swagger2:2.9.2')
 	implementation('io.springfox:springfox-swagger-ui:2.9.2')
 }
