--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	//providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	implementation('io.springfox:springfox-swagger2:2.9.2')
 	implementation('io.springfox:springfox-swagger-ui:2.9.2')
+	testImplementation('com.google.code.gson:gson')
 }
 
 test {
