--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,5 +38,7 @@ info.company.name=TaskCrudAppCreator
 info.company.goal="Our goal is to make the world a better place!
 info.company.email=task@crud.com
 info.company.phone=744489230
-
+# Administration
+admin.name = Hubert
+company.details = Michael Scott Paper Company
 
